# napari-tracing

./: .pre-commit-config.yaml  README.md  a-star-image_tracing.csv  plugin_workflow.md  setup.cfg  tox.ini
.github/workflows/: publish.yml  release.yml
data/: sample-2d.tif  sample-3d.csv  sample_2d_tracing_0.swc
sandbox/: runTracingWidget.py
src/napari_tracing/: __init__.py  _combobox.py  _dialog_widget.py  _layer_model.py  _logger.py  _segment_model.py  _trace_loader.py  _trace_saver.py  _widget.py  napari.yaml  path.py  point.py  utils.py
src/napari_tracing/_tests/: test_widget.py
