[metadata]
name = napari-tracing
version = 1.0.1
description = A plugin to trace the brightest path between two points in an image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mapmanager/napari-tracing
author = Vasudha Jha
author_email = reachvasudha27@gmail.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/mapmanager/napari-tracing/issues
    Documentation = https://github.com/mapmanager/napari-tracing#README.md
    Source Code = https://github.com/mapmanager/napari-tracing
    User Support = https://github.com/mapmanager/napari-tracing/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
    brightest-path-lib

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-tracing = napari_tracing:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
